# icra_firefly

./: .gitignore  CMakeLists.txt  README.md  package.xml  run.sh
AutoPID/: AutoPID.cpp  AutoPID.h
MoveControl/: MoveControl.cpp  MoveControl.h  move_control_node.cpp
SerialPort/: SerialPort.cpp  SerialPort.h
VisualServo/: AutoPID.cpp  AutoPID.h  MoveControl.cpp  MoveControl.h  SerialPort.cpp  SerialPort.h  move_control_node.cpp  visual_servo_node.cpp  visual_servo_node.h
launch/: armor_detection.launch  move_control.launch  slam_start.launch  visual_servo.launch
msg/: ArmorDetection.msg  EnemyPos.msg  GimbalControl.msg
scripts/: SSDDeal.py  armor_detection.py  armor_detection_demo.py  armor_detection_node.py  fake_talker.py  gimbal_talker.py  move_talker.py  shoot_talker.py  test.py
scripts/nets/: nets_factory.py  np_methods.py  ssd_mobilenetv2.py  ssd_vgg_300.py
scripts/preprocessing/: preprocessing_factory.py
